--- a/conda/requirements.txt
+++ b/conda/requirements.txt
@@ -1,21 +1,41 @@
 certifi==2023.7.22
 charset-normalizer==3.3.0
+cmake==3.27.7
+filelock==3.12.4
 gensim==4.3.2
 idna==3.4
 imbalanced-learn==0.11.0
 Jinja2==3.1.2
 joblib==1.3.2
+lit==17.0.3
 MarkupSafe==2.1.3
+mpmath==1.3.0
 networkx==2.8.8
 node2vec==0.4.6
 numpy==1.26.1
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
 psutil==5.9.6
 pyparsing==3.1.1
+python-dotenv==1.0.0
 requests==2.31.0
 scikit-learn==1.3.1
 scipy==1.11.3
 smart-open==6.4.0
+sympy==1.12
 threadpoolctl==3.2.0
+torch==2.0.1
 torch-geometric==2.3.1
 tqdm==4.66.1
+triton==2.0.0
+typing_extensions==4.8.0
 urllib3==2.0.7
