--- a/conda/requirements.txt
+++ b/conda/requirements.txt
@@ -25,6 +25,7 @@ nvidia-cusparse-cu11==11.7.4.91
 nvidia-nccl-cu11==2.14.3
 nvidia-nvtx-cu11==11.7.91
 psutil==5.9.6
+pydot==1.4.2
 pyparsing==3.1.1
 python-dotenv==1.0.0
 requests==2.31.0
