--- a/conda/requirements.txt
+++ b/conda/requirements.txt
@@ -40,3 +40,7 @@ tqdm==4.66.1
 triton==2.0.0
 typing_extensions==4.8.0
 urllib3==2.0.7
+pandas==2.1.1 
+tensorflow==2.14.0
+matplotlib==3.8.0
+seaborn==0.13.0
